fixed home picture responsiveness on small devices

--- a/assets/css/elegant_dark.css
+++ b/assets/css/elegant_dark.css
@@ -7647,9 +7647,27 @@ textarea.form-control-lg {
 }
 
 .w-100 {
-  width: 100% !important;
-}
+  width: 100%!important;
+  
 
+}
+@media only screen and (max-width: 480px) {
+.w-100 {
+    width: 100%;
+    height: 300px;
+  object-fit: cover;
+  object-position: bottom;
+
+  }
+}
+@media only screen and (max-width: 786px) {
+  .w-100 {
+      width: 100%;
+      height: 300px;
+    object-position: center;
+  
+    }
+  }
 .w-auto {
   width: auto !important;
 }
